# CHORUS

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.Setup  Dockerfile.base  GENESIS_PROMPT.md  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.rag.yml  docker-compose.setup.yml  docker-compose.state.yml  docker-compose.test.yml  docker-compose.yml  documentation  gitdiffs  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  web_ui.py  wsgi.py  wsgi_embedder.py
chorus.egg-info/: PKG-INFO
chorus_engine/: config.py
chorus_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: 00_GNOSIS.md  00_MISSION_CHARTER.md  00_THE_CONSTITUTION.md  01_CONSTITUTION.md  02_CONTRIBUTING.md  02_THE_ARCHITECTURAL_VISION.md  03_SYSTEM_SLOS.md  03_THE_SYSTEM_SLOS.md  04_DATAFLOW_TRANSFORMATION.md  04_THE_VERIFICATION_COVENANT.md  04_VERIFICATION_COVENANT.md  05_FAILED_HYPOTHESES.md  05_MASTER_PLAN_VERIFICATION.md  05_THE_CONTRIBUTING_GUIDE.md  06_CHARTER_OF_ENVIRONMENTAL_STABILITY.md  07_CHARTER_OF_ENVIRONMENTAL_STABILITY.md  07_THE_DEVELOPMENT_PROTOCOL.md  GENESIS_PROMPT.md  GENESIS_PROMPT_V2.md  markdown
scripts/: .idea_00_unified_dev_environment.md.swp  explore_newsapi.py  explore_usajobs.py  generate_context.sh  generate_keywords_from_dictionary.py  harvester_worker.py  ingest_3_generate_dsv_data.py  ingest_4_populate_vectordb.py  newsapi_harvester.py  persona_worker.py  personas.py  schema.sql  (+5 more)
(+137 files in other folders)
